// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render 1`] = `
<Card>
  <Box
    flexDirection="column"
    height="100%"
    padding="s8"
  >
    <Box
      justifyContent="center"
      minHeight="200px"
    >
      <Image
        alt="product photo"
        src="__IMAGE_URL__"
        width="100%"
      />
    </Box>
    <Box
      flexDirection="column"
      height="100%"
    >
      <Text
        textAlign="center"
      >
        <H3>
          __TITLE__
        </H3>
      </Text>
      <Divider />
      <Box
        justifyContent="flexEnd"
        marginBottom="s4"
        marginTop="s16"
      >
        <Text
          color="MAIN_RED"
          fontSize="fs16"
          fontWeight="fw700"
        >
          lei 
          100
        </Text>
      </Box>
    </Box>
  </Box>
</Card>
`;

exports[`ProductCard should render with alternative product 1`] = `
<Card>
  <Box
    flexDirection="column"
    height="100%"
    padding="s8"
  >
    <Box
      justifyContent="center"
      minHeight="200px"
    >
      <Image
        alt="product photo"
        src="test-file-stub"
        width="100%"
      />
    </Box>
    <Box
      flexDirection="column"
      height="100%"
    >
      <Text
        textAlign="center"
      >
        <H3>
          __TITLE__
        </H3>
      </Text>
      <Divider />
      <Box
        justifyContent="flexEnd"
        marginBottom="s4"
        marginTop="s16"
      >
        <Text
          color="MAIN_RED"
          fontSize="fs16"
          fontWeight="fw700"
        >
          lei 
          100
        </Text>
      </Box>
    </Box>
  </Box>
</Card>
`;
